# hc32l110_template

./: CMakeLists.txt  HC32L110.ld  README.md
Core/Src/: main.c
Drivers/CMSIS/Device/HC/HC32L110/Include/: hc32l110.h
Drivers/HC32L110_DDL_Driver/inc/: base_types.h  clk.h  ddl.h  gpio.h
Drivers/HC32L110_DDL_Driver/src/: clk.c  ddl.c  gpio.c  rtc.c  uart.c
Misc/: pyocd.yaml
cmake/: gcc-arm-none-eabi.cmake
cmake/hc32/: CMakeLists.txt
